--- a/index.html
+++ b/index.html
@@ -1,33 +1,103 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Railway Lost and Found</title>
+    <style>
+        body {
+            background: linear-gradient(135deg, #a2c2e4, #f5f7fa);
+            /* Creates a diagonal gradient from #a2c2e4 to #f5f7fa */
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        form {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        label {
+            display: block;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        textarea,
+        input[type="date"] {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            background-color: #007bff;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            background: rgba(255, 255, 255, 0.9);
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <h1>Lost and Found Railway Properties</h1>
-    
-    <h2>Report a Lost Item</h2>
-    <form id="lostItemForm">
-        <label for="name">Item Name:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="description">Description:</label>
-        <textarea id="description" name="description" required></textarea>
-        <br>
-        <label for="dateLost">Date Lost:</label>
-        <input type="date" id="dateLost" name="dateLost" required>
-        <br>
-        <label for="contactInfo">Contact Info:</label>
-        <input type="text" id="contactInfo" name="contactInfo" required>
-        <br>
-        <button type="submit">Report Lost Item</button>
-    </form>
+    <div>
+        <h1>Lost and Found Railway Properties</h1>
+        
+        <h2>Report a Lost Item</h2>
+        <form id="lostItemForm">
+            <label for="name">Item Name:</label>
+            <input type="text" id="name" name="name" required>
+            <br>
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" required></textarea>
+            <br>
+            <label for="dateLost">Date Lost:</label>
+            <input type="date" id="dateLost" name="dateLost" required>
+            <br>
+            <label for="contactInfo">Contact Info:</label>
+            <input type="text" id="contactInfo" name="contactInfo" required>
+            <br>
+            <button type="submit">Report Lost Item</button>
+        </form>
 
-    <h2>Found Items</h2>
-    <ul id="itemsList"></ul>
+        <h2>Found Items</h2>
+        <ul id="itemsList"></ul>
+    </div>
 
     <script>
         const form = document.getElementById('lostItemForm');
