--- a/index.html
+++ b/index.html
@@ -22,63 +22,9 @@
         <section class="hero">
             <h1>Discover Your Path</h1>
             <p>Explore careers and educational opportunities tailored to your interests and skills.</p>
-            <input type="text" placeholder="Search for careers or streams...">
+            <input type="text" placeholder="Search for careers or streams..." id="search-input">
         </section>
     </header>
 
     <main>
-        <section class="streams">
-            <h2>Explore Different Academic Streams</h2>
-            <div class="stream-cards">
-                <div class="card">
-                    <h3>Science</h3>
-                    <p>Discover careers in Medicine, Engineering, and Research.</p>
-                    <a href="stream.html#science">Learn More</a>
-                </div>
-                <div class="card">
-                    <h3>Arts</h3>
-                    <p>Explore opportunities in Fine Arts, Literature, and History.</p>
-                    <a href="stream.html#arts">Learn More</a>
-                </div>
-                <div class="card">
-                    <h3>Commerce</h3>
-                    <p>Find out about careers in Business, Finance, and Marketing.</p>
-                    <a href="stream.html#commerce">Learn More</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="featured-careers">
-            <h2>Top Career Choices</h2>
-            <div class="career-cards">
-                <div class="card">
-                    <h3>Software Developer</h3>
-                    <p>Build and maintain software applications.</p>
-                    <a href="career.html#software-developer">View Details</a>
-                </div>
-                <div class="card">
-                    <h3>Doctor</h3>
-                    <p>Provide medical care and treatment.</p>
-                    <a href="career.html#doctor">View Details</a>
-                </div>
-                <div class="card">
-                    <h3>Graphic Designer</h3>
-                    <p>Create visual content to communicate ideas.</p>
-                    <a href="career.html#graphic-designer">View Details</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 CareerGuide. All rights reserved.</p>
-        <div class="social-media">
-            <a href="#" class="social-icon">FB</a>
-            <a href="#" class="social-icon">TW</a>
-            <a href="#" class="social-icon">LI</a>
-        </div>
-    </footer>
-
-    <script src="js/main.js"></script>
-</body>
-</html>
+        <section clas
