--- a/index.html
+++ b/index.html
@@ -3,28 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career Guidance - Home</title>
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <title>ParkEasy - Your Solution to Parking Challenges</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <div class="logo">ParkEasy</div>
         <nav>
-            <a href="index.html" class="logo">CareerGuide</a>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="stream.html">Streams</a></li>
-                <li><a href="career.html">Careers</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">For Space Owners</a></li>
+                <li><a href="#">For Renters</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <section class="hero">
-            <h1>Discover Your Path</h1>
-            <p>Explore careers and educational opportunities tailored to your interests and skills.</p>
-            <input type="text" placeholder="Search for careers or streams..." id="search-input">
-        </section>
     </header>
 
-    <main>
-        <section clas
+    <section class="hero">
+        <h1>Find and Rent Parking Spaces Easily</h1>
+        <button onclick="window.location.href='search.html'">Find a Parking Spot</button>
+    </section>
+
+    <section class="features">
+        <div class="feature">
+            <h2>Unique Parking ID</h2>
+            <p>Each parking spot has a unique ID for easy tracking and booking.</p>
+        </div>
+        <div class="feature">
+            <h2>Real-Time Availability</h2>
+            <p>Check real-time availability to find the perfect spot instantly.</p>
+        </div>
+        <div class="feature">
+            <h2>Rent Charges & Time Slots</h2>
+            <p>Choose from hourly, daily, or weekly rates with clear pricing.</p>
+        </div>
+        <div class="feature">
+            <h2>Parking Spot Details</h2>
+            <p>Get comprehensive details about each spot, including size and security features.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 ParkEasy. All rights reserved.</p>
+    </footer>
+</body>
+</html>
