--- a/about.html
+++ b/about.html
@@ -3,52 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career Guidance - About Us</title>
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <title>About Us - ParkEasy</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <div class="logo">ParkEasy</div>
         <nav>
-            <a href="index.html" class="logo">CareerGuide</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="stream.html">Streams</a></li>
-                <li><a href="career.html">Careers</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">For Space Owners</a></li>
+                <li><a href="#">For Renters</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="about">
-            <h1>About Us</h1>
-            <p>We are dedicated to helping students find the right career path through detailed guidance and information.</p>
-            <h2>Our Team</h2>
-            <div class="team">
-                <!-- Sample team member; replace with dynamic content as needed -->
-                <div class="team-member">
-                    <h3>Jane Doe</h3>
-                    <p>Career Advisor</p>
-                </div>
-                <div class="team-member">
-                    <h3>John Smith</h3>
-                    <p>Content Specialist</p>
-                </div>
-            </div>
-        </section>
-    </main>
+    <section class="about">
+        <h1>About ParkEasy</h1>
+        <p>ParkEasy is an innovative web platform designed to address the growing issue of parking scarcity in urban neighborhoods. Our mission is to optimize space utilization by allowing residents to rent out their unused parking spaces to drivers, providing a convenient solution for both space owners and renters.</p>
+
+        <h2>Our Mission</h2>
+        <p>We aim to reduce congestion and the environmental impact caused by drivers circling streets in search of parking. By turning unused parking spaces into a source of income for residents and a solution for drivers, ParkEasy enhances urban mobility and improves the quality of life in crowded neighborhoods.</p>
+
+        <h2>How It Works</h2>
+        <p>ParkEasy utilizes a straightforward tech stack of HTML, CSS, JavaScript, and a SQL-based database to offer a user-friendly interface, secure transactions, and scalability. Our platform displays real-time availability of parking spots, allowing users to easily find and book the perfect space.</p>
+
+        <h2>Our Team</h2>
+        <p>Our team is dedicated to improving urban mobility through innovative technology. We work tirelessly to ensure ParkEasy provides a seamless experience for both parking space owners and renters.</p>
+        
+        <h2>Contact Us</h2>
+        <p>If you have any questions or need assistance, please <a href="contact.html">contact us</a>. We're here to help!</p>
+    </section>
 
     <footer>
-        <p>&copy; 2024 CareerGuide. All rights reserved.</p>
-        <div class="social-media">
-            <a href="#" class="social-icon">FB</a>
-            <a href="#" class="social-icon">TW</a>
-            <a href="#" class="social-icon">LI</a>
-        </div>
+        <p>&copy; 2024 ParkEasy. All rights reserved.</p>
     </footer>
-
-    <script src="js/main.js"></script>
 </body>
 </html>
