--- a/index.html
+++ b/index.html
@@ -1,51 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParkEasy - Your Solution to Parking Challenges</title>
-    <link rel="stylesheet" href="styles.css">
+	<meta name="viewport" content="with=device-width, initial-scale=1.0">
+	<title>University Website Design Easy Tutorials</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2? family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo">ParkEasy</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">How It Works</a></li>
-                <li><a href="#">For Space Owners</a></li>
-                <li><a href="#">For Renters</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+	<section class="header">
+	<nav>
+	<a href="index.html"><img src="images/logo.png" width="100" height="100" alt="Image"></a> 
+	<div class="nav-links">
+		<ul>
+			<li><a href="">HOME</a></li>
+			<li><a href="">ABOUT</a></li>
+			<li><a href="">CONTACT</a></li>
+		</ul>
+	  </div>
+	</nav>
+	<div class="text-box">
+	<h1>Rental Parking Destination</h1>
+	<p>Rent your Parking or grab a Parking for your vehicle in seconds!
+	</p>
+	<a href="" class="hero-btn">Register now!</a> I
+</div>
 
-    <section class="hero">
-        <h1>Find and Rent Parking Spaces Easily</h1>
-        <button onclick="window.location.href='search.html'">Find a Parking Spot</button>
-    </section>
-
-    <section class="features">
-        <div class="feature">
-            <h2>Unique Parking ID</h2>
-            <p>Each parking spot has a unique ID for easy tracking and booking.</p>
-        </div>
-        <div class="feature">
-            <h2>Real-Time Availability</h2>
-            <p>Check real-time availability to find the perfect spot instantly.</p>
-        </div>
-        <div class="feature">
-            <h2>Rent Charges & Time Slots</h2>
-            <p>Choose from hourly, daily, or weekly rates with clear pricing.</p>
-        </div>
-        <div class="feature">
-            <h2>Parking Spot Details</h2>
-            <p>Get comprehensive details about each spot, including size and security features.</p>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 ParkEasy. All rights reserved.</p>
-    </footer>
+  </section>
 </body>
 </html>
