--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h1>Rental Parking Destination</h1>
 	<p>Rent your Parking or grab a Parking for your vehicle in seconds!
 	</p>
-	<a href="" class="hero-btn">Register now!</a> I
+	<a href="" class="hero-btn">Register now!</a> 
 </div>
 
   </section>
