--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="with=device-width, initial-scale=1.0">
-	<title>University Website Design Easy Tutorials</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2? family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ParkEasy - Your Parking Solution</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<section class="header">
-	<nav>
-	<a href="index.html"><img src="images/logo.png" width="100" height="100" alt="Image"></a> 
-	<div class="nav-links">
-		<ul>
-			<li><a href="">HOME</a></li>
-			<li><a href="">ABOUT</a></li>
-			<li><a href="">CONTACT</a></li>
-		</ul>
-	  </div>
-	</nav>
-	<div class="text-box">
-	<h1>Rental Parking Destination</h1>
-	<p>Rent your Parking or grab a Parking for your vehicle in seconds!
-	</p>
-	<a href="" class="hero-btn">Register now!</a> 
-</div>
-
-  </section>
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="text-box">
+            <h1>Rental Parking Destination</h1>
+            <p>Rent your parking space or find a spot for your vehicle in seconds!</p>
+            <a href="register.html" class="hero-btn">Register Now!</a>
+        </div>
+    </section>
 </body>
 </html>
