--- a/index.html
+++ b/index.html
@@ -26,5 +26,30 @@
             <a href="register.html" class="hero-btn">Register Now!</a>
         </div>
     </section>
+
+    <!-- Stylish Images Section -->
+    <section class="features">
+        <h2>Why Choose Us?</h2>
+        <div class="feature-items">
+            <div class="feature-item">
+                <img src="images/urban-parking.jpg" alt="Convenient Parking">
+                <h3>Convenient Parking</h3>
+                <p>Find a parking spot easily and quickly.</p>
+            </div>
+            <div class="feature-item">
+                <img src="images/secure-parking.jpg" alt="Secure Spaces">
+                <h3>Secure Spaces</h3>
+                <p>Our spaces come with high security features.</p>
+            </div>
+            <div class="feature-item">
+                <img src="images/affordable-rates.jpg" alt="Affordable Rates">
+                <h3>Affordable Rates</h3>
+                <p>Competitive pricing to suit your budget.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Add more sections as needed -->
+
 </body>
 </html>
