--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </nav>
         <div class="text-box">
-            <h1>Rental Parking Destination</h1>
+            <h1>Parking Space Reservation</h1>
             <p>Rent your parking space or grab a parking spot for your vehicle in seconds!</p>
             <a href="register.html" class="hero-btn">Register Now!</a>
         </div>
