--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParkEasy - Your Parking Solution</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ParkEasy - Rental Parking Destination</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
+            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a> 
             <div class="nav-links">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
         <div class="text-box">
-            <h1>Parking Space Reservation</h1>
-            <p>Rent your parking space or grab a parking spot for your vehicle in seconds!</p>
-            <a href="register.html" class="hero-btn">Register Now!</a>
+            <h1>Rental Parking Destination</h1>
+            <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
+            <a href="register.html" class="hero-btn">Register now!</a>
         </div>
     </section>
-
+    
     <section class="course">
         <h1>Features</h1>
-        <p>Take a look at the features we offer!</p>
+        <p>Take a look at what features you get!</p>
         <div class="row">
             <div class="course-col">
-                <h3>Rent Your Parking</h3>
-                <p>If you are a parking owner, register your parking space with zero registration charges. Your empty parking space can earn you hourly rents!</p>
+                <h3>Rent your Parking</h3>
+                <p>If you are a parking owner, register your parking according to your flexibility with zero registration charges and earn hourly rents from your empty parking space!</p>
             </div>
             <div class="course-col">
                 <h3>Book a Parking</h3>
-                <p>If you can't find parking nearby and don't want to risk getting towed, secure a parking spot for your vehicle for hours!</p>
+                <p>If you can't find parking nearby and want to avoid towing, park your vehicle in a secured spot for hours!</p>
             </div>
             <div class="course-col">
                 <h3>Economical</h3>
-                <p>Select parking according to your budget, making it economical and pocket-friendly!</p>
+                <p>Select your desired parking based on your budget, making it economical and pocket-friendly!</p>
             </div>
         </div>
     </section>
