--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </nav>
         <div class="text-box">
-            <h1>Rental Parking Destination</h1>
+            <h1>Parking Space Reservation</h1>
             <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
             <a href="register.html" class="hero-btn">Register now!</a>
         </div>
