--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParkEasy - Parking Space Reservationn</title>
+    <title>ParkEasy - Rental Parking Destination</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -20,7 +21,7 @@
             </div>
         </nav>
         <div class="text-box">
-            <h1>Parking Space Reservation</h1>
+            <h1>Rental Parking Destination</h1>
             <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
             <a href="register.html" class="hero-btn">Register now!</a>
         </div>
