--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - ParkEasy</title>
     <link rel="stylesheet" href="style.css">
@@ -25,7 +26,7 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col"> 
-                <h1>Your Premier Parking Partner</h1>
+                <h1>We are the best Parking Providers</h1>
                 <p>At ParkEasy, we believe in turning everyday parking challenges into opportunities. Our platform connects parking space owners with individuals searching for convenient and affordable parking solutions. Whether you have an unused driveway, garage, or parking spot, you can easily rent it out and earn extra income. For drivers, we offer a stress-free way to find parking spaces in prime locations, saving time and reducing the hassle of searching for parking.</p>
                 <p>Our mission is to create a community-driven solution to the growing problem of parking shortages in urban and suburban areas. By optimizing unused parking spaces, we aim to reduce congestion, make cities more efficient, and provide a flexible platform where owners and renters can both benefit.</p>
                 <a href="register.html" class="hero-btn red-btn">EXPLORE NOW</a>
