--- a/about.html
+++ b/about.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - ParkEasy</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+	<meta name="viewport" content="with=device-width, initial-scale=1.0">
+	<title>About ParkEasy</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2? family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="sub-header">
-        <nav>
-            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a> 
-            <div class="nav-links">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </div>
-        </nav>
-        <h1>About Us</h1>
-    </section>
-    
-    <section class="about-us">
-        <div class="row">
-            <div class="about-col"> 
-                <h1>We are the best Parking Providers</h1>
-                <p>At ParkEasy, we believe in turning everyday parking challenges into opportunities. Our platform connects parking space owners with individuals searching for convenient and affordable parking solutions. Whether you have an unused driveway, garage, or parking spot, you can easily rent it out and earn extra income. For drivers, we offer a stress-free way to find parking spaces in prime locations, saving time and reducing the hassle of searching for parking.</p>
-                <p>Our mission is to create a community-driven solution to the growing problem of parking shortages in urban and suburban areas. By optimizing unused parking spaces, we aim to reduce congestion, make cities more efficient, and provide a flexible platform where owners and renters can both benefit.</p>
-                <a href="register.html" class="hero-btn red-btn">EXPLORE NOW</a>
-            </div>
-            <div class="about-col">
-                <img src="images/about.jpg" alt="About Us Image">
-            </div>
-        </div>
-    </section>
+	<section class="sub-header">
+	<nav>
+	<a href="index.html"><img src="images/logo.png" width="100" height="100" alt="Image"></a> 
+	<div class="nav-links">
+		<ul>
+			<li><a href="index.html">HOME</a></li> <!-- Updated href -->
+			<li><a href="about.html">ABOUT</a></li> <!-- Make sure this points to about.html -->
+			<li><a href="contact.html">CONTACT</a></li> <!-- Update this if you have a contact page -->
+		</ul>
+	</div>
+</nav>
 
-    <section class="footer">
-        <h4>About Us</h4>
-        <p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
-    </section>
+		<h1>About Us</h1>
+
+  </section>
+	
+<section class="about-us">
+	<div class="row">
+	<div class="about-col"> 
+	<h1>Your Premier Parking Partner</h1> 
+	<p>At ParkEasy, we believe in turning everyday parking challenges into opportunities. Our platform is designed to connect parking space owners with individuals searching for convenient and affordable parking solutions. Whether you have an unused driveway, garage, or parking spot, you can easily rent it out and earn extra income. For drivers, we offer a stress-free way to find parking spaces in prime locations, saving time and reducing the hassle of searching for parking.
+
+Our mission is to create a community-driven solution to the growing problem of parking shortages in urban and suburban areas. By optimizing unused parking spaces, we aim to reduce congestion, make cities more efficient, and provide a flexible platform where owners and renters can both benefit.</p>
+<a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+</div>
+<div class="about-col">
+	<img src="images/about.jpg">
+	</div>
+</div>
+</section>
+<section class="footer">
+	<h4>About Us</h4>
+	<p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
+	<div class="icons">
+	<i class="fa fa-facebook"></i>
+	<i class="fa fa-twitter"></i>
+	<i class="fa fa-instagram"></i>
+	<i class="fa fa-linkedin"></i>
+</div>
+</section>
+
+
 </body>
 </html>
