--- a/index.html
+++ b/index.html
@@ -1,67 +1,62 @@
-
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="with=device-width, initial-scale=1.0">
-	<title>ParkEasy: Parking Providers</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2? family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ParkEasy: Parking Providers</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<section class="header">
-	<nav>
-	<a href="index.html"><img src="images/logo.png" width="100" height="100" alt="Image"></a> 
-	<div class="nav-links">
-		<ul>
-			<li><a href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT</a></li> <!-- Updated href -->
-			<li><a href="contact.html">CONTACT</a></li>
-		</ul>
-	</div>
-</nav>
+    <header class="header">
+        <nav>
+            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
 
-	<<div class="text-box">
-    <h1>Parking Space Reservation</h1>
-    <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
+        <div class="text-box">
+            <h1>Parking Space Reservation</h1>
+            <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
+            <a href="signup.html" class="hero-btn">Sign Up</a>
+            <a href="login.html" class="hero-btn">Login</a>
+        </div>
+    </header>
     
-    <!-- Buttons for Sign Up and Login -->
-    <a href="signup.html" class="hero-btn">Sign Up</a>
-    <a href="login.html" class="hero-btn">Login</a>
-</div>
+    <main class="course">
+        <h1>Features</h1>
+        <p>Take a look at what features you get!</p>
+        <div class="row">
+            <div class="course-col">
+                <h3>Rent your Parking</h3>
+                <p>If you are a parking owner, then register your parking according to your flexibility with zero registration charges, and your empty parking space will give you hourly rents!</p>
+            </div>
+            <div class="course-col">
+                <h3>Book a Parking</h3>
+                <p>If you are unable to get a parking nearby and don't want it to get towed by the traffic police, then park your vehicle in a secured parking spot for hours!</p>
+            </div>
+            <div class="course-col">
+                <h3>Economical</h3>
+                <p>Select your desired parking according to your budget, making it economical and pocket-friendly!</p>
+            </div>
+        </div>
+    </main>
 
-  </section>
-	
-<section class="course">
-	<h1>Features</h1>
-	<p>Take a look at what features that you get!</p>
-	<div class="row">
-		<div class="course-col">
-		<h3>Rent your Parking</h3>
-	<p>If you are a parking owner then register your parking according to your flexibility with zero registration charges and your empty parking space will give you hourly rents!</p>
-</div>
-<div class="course-col">
-		<h3>Book a Parking</h3>
-	<p>If you are unable to get a parking nearby and don't want it to get towed by the traffic police then park your vehicle in a secured parking spot for hours! </p>
-</div>
-		<div class="course-col">
-		<h3>Economical</h3>
-	<p>Select your desired parking according to your budget making it economical and pocket friendly!</p>
-</div>
-
-</section>
-<section class="footer">
-	<h4>About Us</h4>
-	<p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
-	<div class="icons">
-	<i class="fa fa-facebook"></i>
-	<i class="fa fa-twitter"></i>
-	<i class="fa fa-instagram"></i>
-	<i class="fa fa-linkedin"></i>
-</div>
-</section>
-
+    <footer class="footer">
+        <h4>About Us</h4>
+        <p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
+        <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+        </div>
+    </footer>
 </body>
 </html>
