--- a/login.html
+++ b/login.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - ParkEasy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="sub-header3">
+    <header class="sub-header3">
         <nav>
-            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="Image"></a>
+            <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -19,14 +18,18 @@
             </div>
         </nav>
         <h1>Login</h1>
-    </section>
+    </header>
 
-    <section class="login-form">
+    <main class="login-form">
         <form action="login.php" method="POST">
             <input type="email" name="email" placeholder="Enter your email" required>
             <input type="password" name="password" placeholder="Enter your password" required>
             <button type="submit" class="hero-btn">Login</button>
         </form>
-    </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 ParkEasy. All rights reserved.</p>
+    </footer>
 </body>
 </html>
