--- a/myparking.html
+++ b/myparking.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +34,8 @@
 
             // Check connection
             if ($conn->connect_error) {
-                die("Connection failed: " . $conn->connect_error);
+                echo "<p>Error connecting to the database: " . htmlspecialchars($conn->connect_error) . "</p>";
+                exit();
             }
 
             $sql = "SELECT * FROM parking";
@@ -76,4 +75,3 @@
     </footer>
 </body>
 </html>
-
