--- a/signup.html
+++ b/signup.html
@@ -21,12 +21,11 @@
     </section>
 
     <section class="signup-form">
-        <form action="signup.php" method="POST" onsubmit="return validateForm()">
-            <input type="text" name="name" placeholder="Enter your name" required aria-required="true">
-            <input type="email" name="email" placeholder="Enter your email" required aria-required="true">
-            <input type="password" name="password" placeholder="Enter your password" required aria-required="true">
-
-            <div class="radio-group" aria-required="true">
+        <form action="signup.php" method="POST">
+            <input type="text" name="name" placeholder="Enter your name" required>
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <input type="password" name="password" placeholder="Enter your password" required>
+            <div class="radio-group">
                 <label>
                     <input type="radio" name="user_type" value="owner" required> I am an owner
                 </label>
@@ -34,24 +33,15 @@
                     <input type="radio" name="user_type" value="seeker" required> I am a seeker
                 </label>
             </div>
-            
             <button type="submit" class="hero-btn">Sign Up</button>
         </form>
-        
         <?php
         session_start();
         if (isset($_SESSION['error'])) {
-            echo "<p class='error-message'>" . htmlspecialchars($_SESSION['error']) . "</p>";
+            echo "<p class='error-message'>" . $_SESSION['error'] . "</p>";
             unset($_SESSION['error']);
         }
         ?>
     </section>
-
-    <script>
-        function validateForm() {
-            // Additional client-side validation logic can be added here
-            return true; // Proceed with form submission
-        }
-    </script>
 </body>
 </html>
