--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
             <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -27,17 +27,17 @@
         <div class="row">
             <div class="about-col">
                 <h1>Your Premier Parking Partner</h1>
-                <p>At ParkEasy, we believe in turning everyday parking challenges into opportunities. Our platform is designed to connect parking space owners with individuals searching for convenient and affordable parking solutions. Whether you have an unused driveway, garage, or parking spot, you can easily rent it out and earn extra income. For drivers, we offer a stress-free way to find parking spaces in prime locations, saving time and reducing the hassle of searching for parking.</p>
+                <p>At ParkEasy, we believe in turning everyday parking challenges into opportunities. Our platform connects parking space owners with individuals searching for convenient and affordable parking solutions. Whether you have an unused driveway, garage, or parking spot, you can easily rent it out and earn extra income. For drivers, we offer a stress-free way to find parking spaces in prime locations, saving time and reducing the hassle of searching for parking.</p>
                 <p>Our mission is to create a community-driven solution to the growing problem of parking shortages in urban and suburban areas. By optimizing unused parking spaces, we aim to reduce congestion, make cities more efficient, and provide a flexible platform where owners and renters can both benefit.</p>
-                <a href="#" class="hero-btn red-btn">EXPLORE NOW</a>
+                <a href="#" class="hero-btn red-btn">Explore Now</a>
             </div>
             <div class="about-col">
-                <img src="images/about.jpg" alt="About ParkEasy">
+                <img src="images/about.jpg" alt="Illustration of parking solutions offered by ParkEasy">
             </div>
         </div>
     </section>
 
-    <section class="footer">
+    <footer class="footer">
         <h4>About Us</h4>
         <p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
         <div class="icons">
@@ -46,6 +46,6 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-linkedin"></i>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
