--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParkEasy:Parking Providers</title>
+    <title>ParkEasy: Parking Providers</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -14,16 +14,16 @@
             <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
 
         <div class="text-box">
             <h1>Parking Space Reservation</h1>
-            <p>Rent your Parking or grab a Parking for your vehicle in seconds!</p>
+            <p>Rent your parking or grab a parking spot for your vehicle in seconds!</p>
             <a href="signup.html" class="hero-btn">Sign Up</a>
             <a href="login.html" class="hero-btn">Login</a>
         </div>
@@ -34,16 +34,16 @@
         <p>Take a look at what features you get!</p>
         <div class="row">
             <div class="course-col">
-                <h3>Rent your Parking</h3>
-                <p>If you are a parking owner, then register your parking according to your flexibility with zero registration charges, and your empty parking space will give you hourly rents!</p>
+                <h3>Rent Your Parking</h3>
+                <p>If you are a parking owner, register your parking according to your flexibility with zero registration charges, and earn hourly rents from your empty space!</p>
             </div>
             <div class="course-col">
                 <h3>Book a Parking</h3>
-                <p>If you are unable to get a parking nearby and don't want it to get towed by the traffic police, then park your vehicle in a secured parking spot for hours!</p>
+                <p>If you can't find nearby parking and want to avoid towing, park your vehicle in a secured spot for hours!</p>
             </div>
             <div class="course-col">
                 <h3>Economical</h3>
-                <p>Select your desired parking according to your budget, making it economical and pocket-friendly!</p>
+                <p>Select your desired parking based on your budget, making it economical and pocket-friendly!</p>
             </div>
         </div>
     </main>
