--- a/index.html
+++ b/index.html
@@ -3,75 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ParkEasy connects parking space owners with drivers seeking convenient and affordable parking solutions.">
-    <meta name="keywords" content="parking, rental, parking space, affordable parking">
-    <title>ParkEasy: Parking Providers</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Simple Calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav>
-            <a href="index.html" aria-label="Home page">
-                <img src="images/logo.png" width="100" height="100" alt="ParkEasy Logo">
-            </a>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+    <div class="calculator">
+        <input type="text" id="result" disabled>
+        <div class="buttons">
+            <button onclick="clearResult()">C</button>
+            <button onclick="appendToResult('7')">7</button>
+            <button onclick="appendToResult('8')">8</button>
+            <button onclick="appendToResult('9')">9</button>
+            <button onclick="appendToResult('/')">/</button>
 
-        <div class="text-box">
-            <h1>Parking Space Reservation</h1>
-            <p>Rent your parking or grab a parking spot for your vehicle in seconds!</p>
-            <a href="signup.html" class="hero-btn">Sign Up</a>
-            <a href="login.html" class="hero-btn">Login</a>
-        </div>
-    </header>
-    
-    <main class="course">
-        <h1>Features</h1>
-        <p>Take a look at what features you get!</p>
-        <div class="row">
-            <div class="course-col">
-                <h2>Rent Your Parking</h2>
-                <p>If you are a parking owner, register your parking according to your flexibility with zero registration charges, and earn hourly rents from your empty space!</p>
-            </div>
-            <div class="course-col">
-                <h2>Book a Parking</h2>
-                <p>If you can't find nearby parking and want to avoid towing, park your vehicle in a secured spot for hours!</p>
-            </div>
-            <div class="course-col">
-                <h2>Economical</h2>
-                <p>Select your desired parking based on your budget, making it economical and pocket-friendly!</p>
-            </div>
-        </div>
-    </main>
+            <button onclick="appendToResult('4')">4</button>
+            <button onclick="appendToResult('5')">5</button>
+            <button onclick="appendToResult('6')">6</button>
+            <button onclick="appendToResult('*')">*</button>
 
-    <section class="testimonials">
-        <h2>What Our Users Say</h2>
-        <div class="testimonial">
-            <p>"ParkEasy made finding parking so easy! I love the convenience." - Jane D.</p>
-        </div>
-        <div class="testimonial">
-            <p>"As a parking owner, I’ve earned great extra income without hassle." - Mark R.</p>
-        </div>
-    </section>
+            <button onclick="appendToResult('1')">1</button>
+            <button onclick="appendToResult('2')">2</button>
+            <button onclick="appendToResult('3')">3</button>
+            <button onclick="appendToResult('-')">-</button>
 
-    <footer class="footer">
-        <h4>About Us</h4>
-        <p>At ParkEasy, we connect parking space owners with people in need of convenient, affordable parking. Whether you're an owner looking to rent out unused spaces or a driver searching for a spot, our platform makes the process seamless and stress-free. We aim to reduce parking hassles in busy areas while helping owners earn extra income through their available spaces.</p>
-        <div class="icons">
-            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a>
-            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a>
+            <button onclick="appendToResult('0')">0</button>
+            <button onclick="calculateResult()">=</button>
+            <button onclick="appendToResult('+')">+</button>
         </div>
-    </footer>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
